<resources>
    <string name="app_name">FamilyCircle</string>
    <string name="app_name_with_space">Family circle</string>
    <string name="loading_text">"Loading. Please wait…"</string>
    <string name="empty_necessary_field_warning">Necessary field</string>
    <string name="unknown_text">Unknown</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="offline_text">Offline</string>
    <string name="online_text">Online</string>
    <string name="error_message_unexpected_error">Unexpected error</string>
    <string name="error_message_no_internet_access">No internet access</string>
    <string name="error_message_image_cropped_with_error">Image cropped with error</string>
    <string name="start_presentation_page_start_use">Start using</string>
    <string name="start_presentation_page_from">from</string>
    <string name="start_presentation_team">TYDEYA</string>
    <string name="start_presentation_app_title">Family Circle</string>
    <string name="start_presentation_app_text">It is a modern application for family communication
        through various tracking systems. Called to make your family\'s life easier!</string>
    <string name="start_presentation_happy_family_title">Happy Family</string>
    <string name="start_presentation_happy_family_text">
        With the help of Family Circle, your family will become closer and more united.
        Thanks to its extensive functionality, you can live happier and more productive
    </string>
    <string name="start_presentation_achievement_title">Achievements and tracking</string>
    <string name="start_presentation_achievement_text">
        With the help of Family Circle, your family will become closer and more united.
        Thanks to its extensive functionality, you can live happier and more productive
    </string>
    <string name="start_presentation_productivity_title">Productivity</string>
    <string name="start_presentation_productivity_text">
        With the help of Family Circle, your family will become closer and more united.
        Thanks to its extensive functionality, you can live happier and more productive
    </string>
    <string name="start_input_number_header">Enter your number phone:</string>
    <string name="start_input_number_reason">Family circle will send an SMS message to verify your
    phone number. Your phone will be used to enter your account.</string>
    <string name="start_input_number_hint">Your phone number</string>
    <string name="start_input_number_warning_sms_cost">Carrier SMS charges may apply</string>
    <string name="start_input_number_next_button">Next</string>
    <string name="start_input_number_invalid_error">This phone number is not valid</string>
    <string name="start_input_number_correct_title">Is this phone number correct?</string>
    <string name="start_input_number_correct_text">Are you sure you want to send the code to this phone: </string>
    <string name="get_code_page_header">Phone number verification:</string>
    <string name="get_code_page_reason">To verify your phone number,
        enter the code from SMS: </string>
    <string name="get_code_page_enter_hint">Enter 6-digit code</string>
    <string name="get_code_page_invalid_code_alert">The code must contains 6 digits!</string>
    <string name="get_code_page_reset_sms">Reset message</string>
    <string name="get_code_page_verify_code_button">Accept</string>
    <string name="get_code_page_invalid_code">The code is incorrect</string>
    <string name="create_account_page_name">Your name</string>
    <string name="create_account_page_header">Create new account:</string>
    <string name="create_account_page_reason">Enter your name and optionally provide a photo</string>
    <string name="create_account_page_select_birth">Select a your birth date</string>
    <string name="create_account_page_minute_timer">1:00</string>
    <string name="select_family_title">Family selection not yet available</string>
    <string name="select_family_text">In the future, this section will have the opportunity to
        select or create a family account, but at the moment this section is under development, so
        all users are in the same family, but you can easily make friends with other users!</string>
    <string name="bottom_menu_action_live">live</string>
    <string name="bottom_menu_action_map">map</string>
    <string name="bottom_menu_action_message">message</string>
    <string name="bottom_menu_action_plan">plan</string>
    <string name="bottom_menu_action_panel">panel</string>
    <string name="family_member_view_toolbar_title">Profile</string>
    <string name="family_group_brother">Brother</string>
    <string name="family_member_view_date_of_birth_not_known">Date of birth not known</string>
    <string name="main_live_page_toolbar_title">Live page</string>
    <string name="main_live_page_name_surname">Name Surname</string>
    <string name="main_live_page_recent_activities">Recent Activities:</string>
    <string name="main_plan_page_toolbar_title">Tracking</string>
    <string name="main_plan_item_kitchen_organizer_title">Kitchen organizer</string>
    <string name="main_plan_item_kitchen_organizer_text">Here you can track the availability of products in your refrigerator.</string>
    <string name="main_plan_item_events_title">Upcoming events</string>
    <string name="main_plan_item_events_text">Here you can track upcoming family events.</string>
    <string name="main_plan_item_planning_title">Errands Manager</string>
    <string name="main_plan_item_planning_text">Here you can track various errands.</string>
    <string name="messenger_main_conversation_page_toolbar_title">Conversations</string>
    <string name="messenger_new_conversation">New conversation</string>
    <string name="messenger_dialog_create_conversation_title_text">Conversation title</string>
    <string name="messenger_create_conversation_dialog_add_someone_text">Add someone to the conversation</string>
    <string name="messenger_empty_conversation">Empty conversation</string>
    <string name="messenger_dialog_conversation_info_save_button_text">Save</string>
    <string name="messenger_dialog_conversation_info_leave_button_text">Leave</string>
    <string name="messenger_conversation_info">Conversation info</string>
    <string name="messenger_members">Members:</string>
    <string name="messenger_add_member">Add member</string>
    <string name="messenger_last_message_placeholder">%1$s:\u0020</string>
    <string name="map_page_stub_title">#STAYHOME</string>
    <string name="map__page_stub_text">As the Coronavirus pandemic is raging in the world now,
        it would be terribly wrong to add a convenient map to Family Circle now. Therefore, the
        developers decided not to implement map navigation in this test version of the application.
        Stay home and take good care of your hygiene.</string>
    <string name="manager_menu_item_your_family_title">Your family</string>
    <string name="manager_menu_item_your_profile_title">Your profile</string>
    <string name="manager_menu_item_sign_out_title">Sign out</string>
    <string name="manager_menu_sign_out_dialog_message">Are you sure you want to sign out?</string>
    <string name="kitchen_organizer_shopping_list_title">Shopping List</string>
    <string name="kitchen_organizer_food_in_fridge_title">Food in fridge</string>
    <string name="kitchen_organizer_toolbar_title">Kitchen organizer</string>
    <string name="kitchen_organizer_buy_list_toolbar_title">Buy list</string>
    <string name="kitchen_organizer_add_new_item">add new item</string>
    <string name="kitchen_organizer_number_of_products">%1$s/%2$s</string>
    <string name="kitchen_organizer_buys_catalog_food_title_and_measure_placeholder">%1$s - %2$s %3$s</string>
    <string name="dialog_new_buy_list_title">Shopping list name</string>
    <string name="dialog_new_buy_list_create">Create</string>
    <string name="dialog_new_buy_list_cancel">Cancel</string>
    <string name="dialog_new_buy_list_already_exist">This shopping list already exists</string>
    <string name="dialog_buy_list_settings_already_exist">Shopping list with this name already exists</string>
    <string name="dialog_buy_list_settings_shopping_list_name">Shopping list name</string>
    <string name="edit_product">Edit product</string>
    <string name="dialog_edit_food_data_already_exist">Product with this name already exists in this buy list</string>
    <string name="dialog_new_buy_list_accept">Accept</string>
    <string name="remove_food_from_fridge_dialog_title">Why do you want to remove this food?</string>
    <string name="this_food_went_bad">The food went bad</string>
    <string name="this_food_has_been_eaten">The food has been eaten</string>
    <string name="dialog_new_food_products_name">Products name</string>
    <string name="dialog_new_product_title">New product</string>
    <string name="dialog_buy_catalog_settings_title">Buy catalog settings</string>
    <string name="dialog_buy_catalog_settings_delete_list">Delete list</string>
    <string name="dialog_buy_catalog_settings_save">Save</string>
    <string name="this_buys_catalog_no_longer_exists">This buys catalog no longer exists</string>
    <string name="eat_food_from_fridge_actual_amount_placeholder">%1$s/%2$s</string>
    <string name="eat_food_from_fridge_actual_amount_error_placeholder">You have only %1$s</string>
    <string-array name="quantitative_type_of_product">
        <item>Not chosen</item>
        <item>KG.</item>
        <item>L.</item>
        <item>PCS.</item>
    </string-array>
    <string name="person_page_edit">Edit</string>
    <string name="person_page_add_post">Add post</string>
    <string name="person_page_view_place_of_work">Place of work</string>
    <string name="person_page_view_place_of_study">Place of study</string>
    <string name="person_page_toolbar_title">Edit profile</string>
    <string name="person_edit_page_accept_alert_title">Are you sure you want to change the data?
    </string>
    <string name="cooperation_add_product_placeholder">%1$s bought %2$s</string>
    <string name="cooperation_eat_product_placeholder">%1$s wrote that the %2$s was eaten</string>
    <string name="cooperation_drop_product_placeholder">%1$s wrote that the %2$s was spoiled</string>
    <string name="cooperation_give_task_placeholder">%1$s gave %2$s the task</string>
    <string name="cooperation_refuse_task_placeholder">%1$s rejected the task of %2$s</string>
    <string name="cooperation_perform_task_placeholder">%1$s completed the task of %2$s</string>
    <string name="event_reminder_toolbar_title">Event reminder</string>
    <string name="event_view_author_placeholder">by %1$s</string>
    <string name="event_view_type_placeholder">%1$s, %2$s</string>
    <string name="event_view_this_is_today_event">This is today event</string>
    <string name="event_view_this_event_has_already_passed">This event has already passed</string>
    <string name="event_view_menu_edit_text">Edit event</string>
    <string name="event_view_menu_delete_text">Delete event</string>
    <string name="dialog_eat_food_without_measure_type_in_fridge_title">Have you eaten this product?</string>
    <string name="dialog_eat_food_without_measure_type_in_fridge_yes_button">Yes</string>
    <string name="dialog_eat_food_without_measure_type_in_fridge_no_button">No</string>
    <string name="event_reminder_new_event_toolbar_title">New family event</string>
    <string name="event_reminder_new_event_input_title_hint">Title*</string>
    <string name="event_reminder_new_event_input_description_hint">Description</string>
    <string name="event_reminder_new_event_ordinal_radio_btn">Ordinal</string>
    <string name="event_reminder_new_event_birthdate_radio_btn">Birthdate</string>
    <string name="event_reminder_new_event_important_radio_btn">Important</string>
</resources>