<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="320dp"
    android:layout_height="260dp"
    android:layout_gravity="center"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/remove_food_from_fridge_dialog_title"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:layout_marginBottom="10dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_delete_food_fridge_eaten_food_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_weight="1"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/this_food_has_been_eaten"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        android:textColor="@color/colorWhite"
        android:theme="@style/FormButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_delete_food_fridge_bad_food_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_weight="1"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/this_food_went_bad"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        android:textColor="@color/colorWhite"
        android:theme="@style/FormButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_delete_food_fridge_cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_weight="1"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/dialog_new_buy_list_cancel"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        android:textColor="@color/colorWhite"
        android:theme="@style/FormButton" />

</LinearLayout>