<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingTop="20dp"
    android:paddingRight="15dp"
    tools:context=".ui.firststartpage.startinputnumber.details.StartInputNumberFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/start_input_number_header"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/start_input_number_header" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/start_input_number_reason" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <com.hbb20.CountryCodePicker
            android:id="@+id/start_input_phone_number_ccp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="3dp"
            app:ccp_autoDetectCountry="true"
            app:ccp_textSize="16sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/start_input_phone_number_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/start_input_number_hint"
            android:inputType="phone"
            android:singleLine="true"
            android:theme="@style/StartInputPhoneNumberInputStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/start_input_number_warning_sms_cost" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/start_input_phone_number_next"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins_medium"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text="@string/start_input_number_next_button"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="@color/colorWhite"
            android:theme="@style/FormButton" />

    </LinearLayout>

</LinearLayout>