<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingTop="20dp"
    android:paddingRight="15dp"
    tools:context=".ui.firststartpage.authorization.getcodesms.details.GetCodeFromSmsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/get_code_page_header"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/start_input_number_header" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/get_code_page_reason" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/get_code_page_input"
            android:layout_width="@dimen/get_code_page_input_width"
            android:layout_height="wrap_content"
            android:maxLength="6"
            android:textAlignment="gravity"
            android:textSize="@dimen/get_code_page_input_text_size"
            android:inputType="number"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_code_page_enter_hint" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="40dp">

        <Button
            android:id="@+id/get_code_page_sms_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/get_code_page_reset_sms"
            android:textColor="@color/get_code_page_resend_sms_color"
            android:background="@drawable/get_code_page_resend_sms_btn_selector"
            android:drawableStart="@drawable/get_code_page_resend_sms_pic_selector"
            android:drawablePadding="10dp"/>

        <TextView
            android:id="@+id/get_code_page_resend_timer"
            android:layout_marginStart="40dp"
            android:gravity="center_vertical"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins"
            android:textColor="@color/colorGray"
            android:text="@string/minute_timer"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center_horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/get_code_page_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins_medium"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text="@string/get_code_page_verify_code_button"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="@color/colorWhite"
            android:theme="@style/FormButton" />

    </LinearLayout>

</LinearLayout>