<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CreateNewAccount"
    android:orientation="vertical"
    android:paddingTop="60dp"
    android:paddingBottom="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account_page_header"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/start_input_number_header"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/create_account_page_reason" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="30dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/create_account_page_add_photo"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:src="@drawable/ic_add_a_photo"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/colorPrimary"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_account_page_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_account_page_name"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:theme="@style/StartInputPhoneNumberInputStyle" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/start_input_phone_number_next"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins_medium"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text="@string/start_input_number_next_button"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="@color/colorWhite"
            android:theme="@style/FormButton" />

    </LinearLayout>


</LinearLayout>