<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="20dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/dialog_eat_food_without_measure_type_in_fridge_title"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/dialog_eat_food_without_measure_type_in_fridge_no_button"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        android:textColor="@color/colorWhite"
        android:theme="@style/FormButton"
        app:layout_constraintEnd_toStartOf="@+id/action_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/action_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="10dp"
        android:layout_weight="1"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/dialog_eat_food_without_measure_type_in_fridge_yes_button"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        android:textColor="@color/colorWhite"
        android:theme="@style/FormButton"
        app:layout_constraintBaseline_toBaselineOf="@+id/cancel_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cancel_button" />

</androidx.constraintlayout.widget.ConstraintLayout>